Cleaned up the locale names.

--- a/src/locales/cn.json
+++ b/src/locales/cn.json
@@ -1,14 +1,12 @@
 {
-  "etc-grants-dao": {
+  "pow-summit": {
     "logo-title": "POW Summit",
     "title": "POW Summit 2023",
     "description": "• Bridging the POW chains",
     "description2": "• Back to cypherpunk basics",
     "date": "Prague, Czech Republic, June 26-27",
-    "apply-now-text": "Contact Us",
-    "apply-now-link": "#",
-    "browse-text": "MoneroKon",
-    "browse-link": "https://monerokon.com"
+    "contact-us-text": "Contact Us",
+    "contact-us-link": "#"
   },
 
   "contents-title": "Contents",
